--- a/views/system/new-ritual.jade
+++ b/views/system/new-ritual.jade
@@ -89,6 +89,9 @@ html(lang="de")
 									li
 										input(type="checkbox", name="Traditionen[]", value=__key, id="sm_"+__key)
 										label(for="sm_"+__key)=__trad
+						li
+							input(type="checkbox", name="Repräsentationen[]", value="Elf", id="el")
+							label(for="el") Elfenlied
 				div
 					label Merkmale
 					ul.indent
