Corrected Elfenlied fix.

--- a/views/edit-held/ritual.jade
+++ b/views/edit-held/ritual.jade
@@ -169,9 +169,8 @@ html(lang="de")
 					caption Ritual hinzufügen
 					colgroup
 						col(style="width: 2em;")
-						col
-						col(style="width: 10em;")
-						col(span="2", style="width: 20em;")
+						col(style="width: 30%;")
+						col(span="3")
 					thead
 						tr
 							td
