--- a/views/geweiht.jade
+++ b/views/geweiht.jade
@@ -30,8 +30,9 @@ mixin SFTableSection(__liste, __name)
 !!! 5
 html(lang="de")
 	head
+		meta(charset="utf-8")
 		title= Person.Name
-		link(rel="stylesheet", type="text/css", href="/show.css")
+		link(rel="stylesheet", type="text/css", href="/edit.css")
 		link(rel="stylesheet", type="text/css", href="/nav.css")
 		style.
 	body
