--- a/views/held.jade
+++ b/views/held.jade
@@ -107,12 +107,12 @@ mixin KampfTable(__liste, __name)
 !!! 5
 html(lang="de")
 	head
+		meta(charset="utf-8")
 		title= Person.Name
 		link(rel="stylesheet", type="text/css", href="/show.css")
 		link(rel="stylesheet", type="text/css", href="/nav.css")
 	body
-		a#top
-		nav
+		nav#top
 			ul#main-menu
 				li
 					a.mitte(title="springe zu Abschnitt ...") &#8681;
