--- a/views/edit-held/ap.jade
+++ b/views/edit-held/ap.jade
@@ -1,16 +1,26 @@
 doctype 5
 html(lang="de")
 	head
+		meta(charset="utf-8")
 		title AP vergeben
 		link(rel="stylesheet", type="text/css", href="/show.css")
+		link(rel="stylesheet", type="text/css", href="/nav-edit.css")
+		style.
+			nav a {
+				width: 25%;
+			}
 	body
-		// nav
-		section
-			h1.mitte Abenteuerpunkte vergeben
+		nav
+			a(href="/held/"+_id, title="Heldenbogen")= "⇒ "+Person.Name.split(' ')[0]
+		header
+			h1.mitte
+				a(href="/held/"+_id)= Person.Name
+		main
 			form(action="/ap/"+_id, method="post", accept-charset="utf-8")
 				input(type="hidden", name="_method", value="put")
+				
 				table.data-section.mitte.eigenschaften
-					caption= Person.Name
+					caption Abenteuerpunkte
 					colgroup
 						col(style="width: 15%")
 						col(style="width: 35%")
