--- a/views/edit-held/attribute.jade
+++ b/views/edit-held/attribute.jade
@@ -1,19 +1,49 @@
 !!! 5
 html(lang="de")
 	head
+		meta(charset="utf-8")
 		title #{Person.Name.split(' ')[0]} bearbeiten
-		link(rel="stylesheet", type="text/css", href="/neu.css")
+		link(rel="stylesheet", type="text/css", href="/edit.css")
+		link(rel="stylesheet", type="text/css", href="/nav.css")
 		script(type="text/javascript", src="/jquery-2.0.3.min.js")
-	
+		style.
+			.setting tbody tr:nth-child(odd) {
+				background-color: #eee;
+			}
 	body
-		h1.mitte #{Person.Name.split(' ')[0]} bearbeiten
+		nav
+			ul#main-menu
+				li
+					a.mitte(title="springe zu Abschnitt ...") &#8681;
+					ul
+						li
+							a(href="#bes") Beschreibung
+						li
+							a(href="#gen") Generierung
+						li
+							a(href="#att") Attribute
+						li
+							a(href="#bas") Basiswerte
+						li
+							a(href="#vna") Vor- &amp; Nachteile
+						li
+							a(href="#vnn") neue Vor- &amp; Nachteile
+				li
+					a(href="#top") [Seitenanfang]
+				li
+					a(href="#save") [speichern]
+				li
+					a(href="/held/"+_id, title="Heldenbogen")= "⇒ "+Person.Name.split(' ')[0]
+		header#top
+			h1.mitte
+				a(href="/held/"+_id)= Person.Name
 		
-		form(action=url, method="post", accept-charset="utf-8")
-			input(type="hidden", name="_method", value="put")
-		
-			fieldset
-				legend Attribute
-				table
+		main
+			form(action=url, method="post", accept-charset="utf-8")#newChar
+				input(type="hidden", name="_method", value="put")
+			
+				table.data-section.talente#att
+					caption Attribute
 					colgroup
 						col(style="width: 40%")
 						col(span="3" style="width: 20%")
@@ -33,7 +63,10 @@ html(lang="de")
 									input(name="Attribute["+val+"][start]", type="number", min="0", step="1", value=Attribute[val].start)
 								td 
 									input(name="Attribute["+val+"][wert]", type="number", min="0", step="1", value=Attribute[val].wert)
-							
-			fieldset.mitte
+								
+			a#save
+			.mitte
 				button(type="submit", disabled) speichern
-				button(type="reset")  reset
+				button(type="reset")  zurücksetzen
+
+		script(type="text/javascript", src="/preprocess.vorteile.js")
