--- a/views/edit-held/basiswerte.jade
+++ b/views/edit-held/basiswerte.jade
@@ -1,19 +1,49 @@
 !!! 5
 html(lang="de")
 	head
+		meta(charset="utf-8")
 		title #{Person.Name.split(' ')[0]} bearbeiten
-		link(rel="stylesheet", type="text/css", href="/neu.css")
+		link(rel="stylesheet", type="text/css", href="/edit.css")
+		link(rel="stylesheet", type="text/css", href="/nav.css")
 		script(type="text/javascript", src="/jquery-2.0.3.min.js")
-	
+		style.
+			.setting tbody tr:nth-child(odd) {
+				background-color: #eee;
+			}
 	body
-		h1.mitte #{Person.Name.split(' ')[0]} bearbeiten
+		nav
+			ul#main-menu
+				li
+					a.mitte(title="springe zu Abschnitt ...") &#8681;
+					ul
+						li
+							a(href="#bes") Beschreibung
+						li
+							a(href="#gen") Generierung
+						li
+							a(href="#att") Attribute
+						li
+							a(href="#bas") Basiswerte
+						li
+							a(href="#vna") Vor- &amp; Nachteile
+						li
+							a(href="#vnn") neue Vor- &amp; Nachteile
+				li
+					a(href="#top") [Seitenanfang]
+				li
+					a(href="#save") [speichern]
+				li
+					a(href="/held/"+_id, title="Heldenbogen")= "? "+Person.Name.split(' ')[0]
+		header#top
+			h1.mitte
+				a(href="/held/"+_id)= Person.Name
 		
-		form(action=url, method="post", accept-charset="utf-8")
-			input(type="hidden", name="_method", value="put")
-
-			fieldset
-				legend Basiswerte
-				table
+		main
+			form(action=url, method="post", accept-charset="utf-8")#newChar
+				input(type="hidden", name="_method", value="put")
+			
+				table.data-section.talente#bas
+					caption Basiswerte
 					colgroup
 						col(style="width: 40%")
 						col(span="3" style="width: 20%")
@@ -40,6 +70,8 @@ html(lang="de")
 								input(name="modifikatoren[AuP][add]",   type="number", min="0", step="1", value=modifikatoren.AuP.add)
 							td
 								input(name="modifikatoren[AuP][max]",   type="number", min="0", step="1", value=modifikatoren.AuP.max)
+						unless modifikatoren.AsP
+							- modifikatoren.AsP = { start: '', add: '', max: '' }
 						tr
 							td#asp(title="Zum (De-)Aktivieren klicken") Astralenergie
 							td 
@@ -48,10 +80,12 @@ html(lang="de")
 								input(name="modifikatoren[AsP][add]",   type="number", min="0", step="1", value=modifikatoren.AsP.add)
 							td
 								input(name="modifikatoren[AsP][max]",   type="number", min="0", step="1", value=modifikatoren.AsP.max)
+						unless modifikatoren.KaP
+							- modifikatoren.KaP = { start: '', add: '' }
 						tr
 							td#kap(title="Zum (De-)Aktivieren klicken") Karmaenergie
 							td 
-								input(name="modifikatoren[KaP][start]", type="number", min="0", step="12", value=modifikatoren.KaP.start)
+								input(name="modifikatoren[KaP][start]", type="number", min="0", step="1", value=modifikatoren.KaP.start)
 							td
 								input(name="modifikatoren[KaP][add]",   type="number", min="0", step="1", value=modifikatoren.KaP.add)
 							td
@@ -85,12 +119,26 @@ html(lang="de")
 								var $inputs = $(this).closest('tr').find('input');
 								$inputs.prop('disabled', !$inputs.prop('disabled'));
 							})
-							.closest('tr')
-							.find('input')
-							.prop('disabled', true);
-						
+						;
+						if (#{!modifikatoren.AsP.max}) {
+							$('#asp')
+								.closest('tr')
+								.find('input')
+								.prop('disabled', true)
+							;
+						}
+						if (#{!modifikatoren.KaP.start}) {
+							$('#kap')
+								.closest('tr')
+								.find('input')
+								.prop('disabled', true)
+							;
+						}
 					})();
-
-			fieldset.mitte
+				
+			a#save
+			.mitte
 				button(type="submit", disabled) speichern
-				button(type="reset")  reset
+				button(type="reset")  zurücksetzen
+
+		script(type="text/javascript", src="/preprocess.vorteile.js")
