--- a/views/held.jade
+++ b/views/held.jade
@@ -115,7 +115,7 @@ html(lang="de")
 		nav#top
 			ul#main-menu
 				li
-					a.mitte(title="springe zu Abschnitt ...") &#8681;
+					a(title="springe zu Abschnitt ...") &#8681;
 					// display section
 					ul
 						li
@@ -155,11 +155,11 @@ html(lang="de")
 							li
 								a(href="/weihe/"+_id) ► Geweihtenbogen
 				li
-					a.mitte(href="/helden") [ Charakterliste ]
+					a(href="/helden") [ Charakterliste ]
 				li
-					a.mitte(href="/neu") [ Neuer Charakter ]
+					a(href="/neu") [ Neuer Charakter ]
 				li 
-					a.mitte #{Person.Name.split(' ')[0]} bearbeiten
+					a #{Person.Name.split(' ')[0]} bearbeiten
 					// edit section
 					ul
 						li
