--- a/views/list-helden.jade
+++ b/views/list-helden.jade
@@ -4,9 +4,9 @@ html(lang="de")
 		title Charakter-Übersicht
 		style.
 			body {
-				margin: 0;
+				margin:  0;
 				padding: 0;
-				font-family: sans-serif;
+				font-family: Georgia, sans-serif;
 			}
 			h1 {
 				text-align: center;
@@ -21,7 +21,7 @@ html(lang="de")
 			}
 			li {
 				font-size: 1.5em;
-				padding: 0.5em;
+				padding:   0.5em;
 				list-style-type: circle;
 			}
 			li a {
